--- a/RetellApi/RetellApi.csproj
+++ b/RetellApi/RetellApi.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <PackageId>Jeff32819.RetellApi</PackageId>
+    <UserSecretsId>37c95bab-8f56-4d4c-a52d-559c85b6a3a5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
